Fix crash when loading a file with reference images

Initialization of reference images decorations should be postponed
until KisView is fully initialized.

BUG:426839